<resources>
    <string name="app_name">Study-Hub</string>
    <!--    로그인화면-->
    <string name="welcome01">지금 스터디 허브에서</string>
    <string name="welcome02">나의</string>
    <string name="welcome03">팀원</string>
    <string name="welcome04">만나보세요</string>

    <string name="head_agreement">이용약관에 동의해주세요</string>
    <string name="sub_agreement">서비스 이용을 위해서 약관 동의가 필요해요</string>
    <string name="allAgree">전체동의</string>
    <string name="service_consent">\[필수\] 서비스 이용약관 동의</string>
    <string name="personalInfo_consent">\[필수\] 개인정보 수집 및 이용 동의</string>
    <string name="txt_word_email">이메일</string>
    <string name="txt_word_password">비밀번호</string>
    <string name="hint_email">이메일 주소를 입력해주세요(@inu.ac.kr)</string>
    <string name="hint_password">비밀번호를 입력해주세요</string>
    <string name="hint_password02">비밀번호를 한 번 더 입력해주세요</string>
    <string name="btn_login">로그인하기</string>
    <string name="next_forget_password"><u>비밀번호가 기억나지 않으시나요?</u></string>
    <string name="btn_tour">둘러보기</string>
    <string name="word_registration">회원가입</string>
    <string name="txterror_email">잘못된 주소입니다. 다시 입력해주세요</string>
    <string name="txterror_password">잘못된 비밀번호예요.(10자리 이상, 특수문자 포함 필수)</string>
    <string name="txterror_passwordOk">사용 가능한 비밀번호예요.</string>
    <string name="txterror_empty"> </string>
    <string name="btnBack_login">\'뒤로가기\'를 한 번 더 누르면 종료돼요.</string>
    <!--    회원가입-->
    <string name="txt_pagenumber">%1$d\/5</string>

    <string name="txt_email">이메일을 입력해주세요</string>
    <string name="hint_univaddress">\@inu.ac.kr</string>
    <string name="txterror2_email">이미 가입된이메일 주소입니다.</string>
    <string name="btn_nextpage">다음</string>
    <string name="txt_sendedemail">인증 코드를 메일로 보내드렸어요</string>
    <string name="txt_resendAlarm">인증코드가 재전송되었어요</string>
    <string name="txt_errorAuthCode">인증코드가 일치하지 않아요</string>
    <string name="hint_authcode">인증코드를 입력해주세요</string>
    <string name="txt_authcode">인증코드</string>
    <string name="btn_resendauth">재전송</string>
    <string name="txt_word_auth">인증</string>

    <string name="txt1_password">비밀번호를 설정해주세요</string>
    <string name="txt2_password">10자리 이상, 특수문자 포함(\!,\@,\#,\$,\%,\^,\&amp;,\*,\?,\~,\_) 필수예요</string>
    <string name="error_notSamePassword">비밀번호가 일치하지 않아요.</string>
    <string name="error_samePassword">비밀번호가 확인되었어요.</string>
    <string name="txt_register_page3_header">스터디 참여에 필요한 정보를 알려주세요</string>
    <string name="txt_register_page3_sub">성별은 추후에 수정이 불가해요</string>
    <string name="txt_word_nickname">닉네임</string>
    <string name="hint_nickname">닉네임을 입력해주세요</string>
    <string name="txtok_nickname">사용 가능한 닉네임이예요</string>
    <string name="texterror_nickname">이미 존재하는 닉네임이예요. 다시 설정해주세요</string>
    <string name="txt_overlapCheck">중복 확인</string>
    <string name="btn_female">여자</string>
    <string name="btn_male">남자</string>


    <string name="txt_major">학과를 알려주세요</string>
    <string name="txt_word_major">학과</string>
    <string name="hint_major">현재 재학중인 학과를 적어주세요</string>

    <!--    비밀번호 찾기-->
    <string name="toolbar_findPassword">비밀번호 찾기</string>
    <string name="setEmail">가입했던 이메일 주소를 입력해주세요.</string>
    <string name="setEmailErr">가입되지 않은 이메일이예요. 다시 입력해 주세요.</string>
    <string name="seeEmailAuth">이메일에 전송된 인증코드를 입력해주세요</string>
    <string name="sentedEmail">전송된이메일</string>

    <!--    학과이름-->
    <string-array name="array_majors">
        <item>공연예술과</item>
        <item>IBE전공</item>
        <item>건설환경공학</item>
        <item>건축공학</item>
        <item>경영학부</item>
        <item>경제학과</item>
        <item>국어교육과</item>
        <item>국어국문학과</item>
        <item>기계공학과</item>
        <item>데이터과학과</item>
        <item>도시건축학</item>
        <item>도시공학과</item>
        <item>도시행정학과</item>
        <item>독어독문학과</item>
        <item>동북아통상전공</item>
        <item>디자인학부</item>
        <item>무역학부</item>
        <item>문헌정보학과</item>
        <item>물리학과</item>
        <item>미디어커뮤니케이션학과</item>
        <item>바이오-로봇 시스템 공학과</item>
        <item>법학부</item>
        <item>불어불문학과</item>
        <item>사회복지학과</item>
        <item>산업경영공학과</item>
        <item>생명공학부(나노바이오공학전공)</item>
        <item>생명공학부(생명공학전공)</item>
        <item>생명과학부(분자의생명전공)</item>
        <item>생명과학부(생명과학전공)</item>
        <item>서양화전공</item>
        <item>세무회계학과</item>
        <item>소비자학과</item>
        <item>수학과</item>
        <item>수학교육과</item>
        <item>스마트물류공학전공</item>
        <item>스포츠과학부</item>
        <item>신소재공학과</item>
        <item>안전공학과</item>
        <item>에너지화학공학</item>
        <item>역사교육과</item>
        <item>영어교육학과</item>
        <item>영어영문학과</item>
        <item>운동건강학부</item>
        <item>유아교육과</item>
        <item>윤리교육과</item>
        <item>일본지역문화학과</item>
        <item>일어교육과</item>
        <item>임베디드시스템공학과</item>
        <item>전기공학과</item>
        <item>전자공학과</item>
        <item>정보통신학과</item>
        <item>정치외교학과</item>
        <item>중어중문학과</item>
        <item>창의인재개발학과</item>
        <item>체육교육과</item>
        <item>컴퓨터공학부</item>
        <item>테크노경영학과</item>
        <item>패션산업학과</item>
        <item>한국화전공</item>
        <item>해양학과</item>
        <item>행정학과</item>
        <item>화학과</item>
        <item>환경공학</item>
    </string-array>

    <string name="txt1_joincomplete1">가입을</string>
    <string name="txt1_joincomplete2">축하</string>
    <string name="txt1_joincomplete3">드립니다!</string>
    <string name="txt2_joincomplete">\t\t\t\t지금 바로 스터디 팀원을 모집하여 \n\t\t\t\t\t\t함께 목표를 달성해 보세요!</string>
    <string name="btn_start">시작하기</string>

    <string name="txt1_interest">잠깐! 관심사를 알려주세요</string>
    <string name="label_interest">관심사 설정</string>
    <string name="txt2_interest">관심사를 설정하면, 해당 스터디가 개설될 때 알림을 받을 수 있어요!</string>
    <string name="btn_complete">완료</string>

    <!--    메인-->
    <string name="bottomnav_home">홈</string>
    <string name="bottomnav_study">스터디</string>
    <string name="bottomnav_mypage">마이페이지</string>
    <string name="btn_goDetail">자세히 보기</string>
    <string name="btn_searchBar">관심있는 스터디를 검색해보세요</string>
    <string name="txt_banner1">NEW! 모집 중인 스터디예요</string>
    <string name="txt_banner2">마감이 임박한 스터디예요</string>
    <string name="txt_banner3">이 스터디는 어떠세요?</string>
    <string name="btn_txt">전체 > </string>

    <!--    home_item_on_recruiting.xml-->
    <string name="txt_people">%1$d/%2$d명</string>
    <string name="txt_detailedFee">%1$n원</string>
    <string name="txt_RemainingSeats">잔여 %1$d자리</string>
    <string name="txt_recentsearch">최근 검색어</string>
    <string name="txt_recomsearch">추천 검색어</string>
    <string name="btn_delete">삭제</string>
    <!--    리사이클러뷰01 아이템02-->
    <string name="sentence_people">%1$d자리 남았어요!</string>
    <!--마이페이지-->
    <string name="btn_pastText">작성한 글</string>
    <string name="btn_pastStudy">참여한 스터디</string>
    <string name="btn_bookmark">북마크</string>
    <string name="txt_head_interesting">관심사 %1$d</string>
    <string name="btn_modify">수정</string>
    <string name="txt_head_interestedmajor">관심 학과 %1$d</string>

    <string name="btn_waitPartner">대기 참여자</string>
    <string name="btn_uerTerms">개인정보처리방침</string>
    <string name="btn_notice">공지사항</string>
    <string name="btn_usingGuide">이용방법</string>
    <string name="btn_asking">문의하기</string>
    <string name="btn_terms">서비스 이용약관</string>
    <string name="endStudy">마감</string>
    <string name="participant">참여자</string>
    <string name="btn_end">마감되었어요</string>

    <!--    이용방법 페이지-->
    <string name="txt_guideToolBar">이용방법</string>
    <string name="txt_peopleNumber">팀원수</string>
    <string name="txt_fee">벌금</string>
    <string name="txt_gender">성별</string>
    <string name="btn_txt_writing">작성하기</string>

    <!--    북마크-->
    <string name="txt_bookMark">북마크</string>
    <string name="btn_allDelete">전체삭제</string>
    <string name="txt_all">전체 %1$d</string>
    <string name="txt_available">잔여%1$d자리</string>
    <string name="btn_join">신청하기</string>
    <string name="txt_binBookmark">북마크 글이 없어요</string>
    <string name="txt_sub_binBookmark">관심있는 스터디를 저장해 보세요!</string>
    <string name="q_deleteBookmark">북마크를 모두 삭제할까요?</string>
    <string name="btn_cancel">취소</string>
    <string name="already_existStudy">이미 신청한 스터디입니다.</string>


    <!--    작성한 글-->
    <string name="txt_writtenPage">작성한글</string>
    <string name="txt_noWritten">작성한 글이 없어요</string>
    <string name="txt_sub_noWritten">새로운 스터디 활동을 시작해보세요!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    참여자  페이지-->
    <string name="waiting">대기</string>
    <string name="participation">참여</string>
    <string name="refusal">거절</string>

    <string name="empty_waiting">참여를 기다리는 대기자가 없어요</string>
    <string name="empty_participation">참여 중인 팀원이 없어요</string>
    <string name="empty_refusal">회원님이 거절한 참여자가 없어요</string>
    <string name="acceptance">수락</string>

    <!--    참여하기 페이지-->
    <string name="apply">참여하기</string>
    <string name="apply_sub">자기소개나 스터디에 대한 의지를 스터디 팀장에게 알려주세요</string>
    <string name="apply_hint">ex) 안녕하세요, 저는 경영학부에 재학 중인 허브입니다! 지각이나 잠수 없이 열심히 참여하겠습니다. 잘 부탁드립니다 :)</string>
    <string name="applicationTextLength">%1$d/200</string>
    <string name="apply_alarm">-수락여부는 알림으로 알려드려요 \n-채팅방 링크는 \'마이페이지-참여한스터디\'에서 확인할 수 있어요</string>
    <string name="apply_error">팀장이 회원님에 대해 알 수 있도록 10자 이상 적어주세요.</string>
    <string name="apply_ok">참여 신청이 완료됐어요.</string>

    <!--    참여한 스터디-->
    <string name="engagedStudy">참여한 스터디</string>
    <string name="binEngagedStudy">참여한 스터디가 없어요</string>
    <string name="sub_binBookmark">나와 맞는 스터디를 찾아보세요!</string>
    <string name="txt_goChatRoom">채팅방으로 이동하기</string>

    <!--    신청내역-->
    <string name="applyHistory">신청 내역</string>
    <string name="empty_applyHistory_head">신청한 스터디가 없어요</string>
    <string name="empty_applyHistory_sub">지금 스터디에 참여해보세요\!</string>
    <string name="complete_deletion">삭제가 완료됐어요.</string>
    <string name="txt_applicationContent">신청내용</string>
    <string name="waitingForOk">수락대기중</string>
    <string name="rejectReason">거절 이유 확인하기</string>
    <string name="deleteApplyHistory_sub">삭제하면 신청이 취소돼요</string>

    <!--    거절이유확인-->
    <string name="txt_reasonForRefusal">스터디 팀장의 거절 이유예요🥲</string>

    <!--    참여한스터디-->
    <string name="deleteEngagedStudy_title">이 스터디를 삭제할까요?</string>
    <string name="deleteEngagedStudy_sub">삭제하면 채팅방을 다시 찾을 수 없어요</string>

</resources>