<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="kr.co.gamja.study_hub.feature.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/layout_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/side_margin">


        <ImageView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:layout_marginBottom="@dimen/login_top_margin"
            android:src="@drawable/img_login_e" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:text="@string/txt_word_email"
            android:textColor="@color/syswhite"
            android:textSize="14sp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_email"
            android:backgroundTint="@color/G_100"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/syswhite"
            android:textColorHint="@color/G_80"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/error_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_email"
            android:textColor="@color/R_50"
            android:textSize="14sp"
            tools:text="에러" />

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_email"
            android:text="@string/txt_word_password"
            android:textColor="@color/syswhite"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_password"
            android:backgroundTint="@color/G_100"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/syswhite"
            android:textColorHint="@color/G_80"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/viewPassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_below="@+id/txt_password"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="10dp"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/toggle_endicon"
            android:tag="0"/>

        <TextView
            android:id="@+id/error_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/R_50"
            android:textSize="14sp"
            android:layout_below="@+id/edit_password"
            tools:text="에러" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_password"
            android:backgroundTint="@color/O_50"
            android:paddingTop="23dp"
            android:paddingBottom="23dp"
            android:text="@string/btn_login"
            android:textColor="@color/syswhite"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:background="#00ff0000"
            android:text="@string/next_forget_password"
            android:textColor="@color/G_60"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_tour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ff0000"
                android:text="@string/btn_tour"
                android:textColor="@color/syswhite"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_registration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ff0000"
                android:text="@string/word_registration"
                android:textColor="@color/O_60"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</layout>
