<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.signup.SignupEndFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/sysblack2">

        <TextView
            android:id="@+id/word_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/icon_back"
            android:gravity="center"
            android:text="@string/word_registration"
            android:textColor="@color/syswhite"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/side_margin"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/bottom_margin">

        <ImageView
            android:id="@+id/img_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/congratulation"
            android:layout_centerHorizontal="true"
            />

            <TextView
                android:id="@+id/txt_headStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/txt1_joincomplete1"
                android:textColor="@color/syswhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/img_registration"
                android:layout_toLeftOf="@+id/txt_headMiddle"
                />

            <TextView
                android:id="@+id/txt_headMiddle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/backgroundword_orange"
                android:gravity="center"
                android:text="@string/txt1_joincomplete2"
                android:textColor="@color/syswhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/img_registration"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txt_headEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/txt1_joincomplete3"
                android:textColor="@color/syswhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/img_registration"
                android:layout_toEndOf="@+id/txt_headMiddle"
                />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/txt2_joincomplete"
            android:textColor="@color/G_40"
            android:textSize="14sp"
            android:layout_below="@id/txt_headStart"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/O_50"
            android:text="@string/btn_start"
            android:textColor="@color/syswhite"
            android:textSize="16sp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>