<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.signup.EmailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createEmail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/sysblack2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageButton
                android:id="@+id/icon_back"
                android:layout_width="@dimen/resized_item"
                android:layout_height="@dimen/resized_item"
                android:layout_alignParentStart="true"
                android:background="@drawable/icon_arrow_left_l_white" />

            <TextView
                android:id="@+id/word_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/icon_back"
                android:gravity="center"
                android:text="@string/word_registration"
                android:textColor="@color/syswhite"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/side_margin">
        <TextView
            android:id="@+id/fca_txt_pagenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/G_60"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="1/4" />

        <TextView
            android:id="@+id/fca_txt_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_email"
            android:textColor="@color/syswhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fca_txt_wordEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_word_email"
            android:textColor="@color/syswhite"
            android:textSize="14sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--                        android:theme="@style/EditTextGreyStyle"-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fca_editlayout_email"
                style="@style/LoginEditTextErrorStyle"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fca_editId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_univaddress"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:textColor="@color/syswhite"
                    android:textColorHint="@color/G_80"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_auth"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/btn_next_orange"
                android:text="@string/txt_word_auth"
                android:textColor="@color/syswhite"
                android:textSize="16sp"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.2"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_resend"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/btn_next_orange"
                android:text="@string/btn_resendauth"
                android:textColor="@color/syswhite"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/fca_txt_wordauthcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_authcode"
            android:textColor="@color/syswhite"
            android:textSize="14sp"
            android:visibility="invisible"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fca_editlayout_authcode"
            style="@style/LoginEditTextErrorStyle"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fca_editauthcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_authcode"

                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="8"
                android:textColor="@color/syswhite"
                android:textColorHint="@color/G_80"
                android:textSize="16sp"
                android:visibility="invisible"
                tools:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fca_btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/O_50"
            android:text="@string/btn_nextpage"
            android:textColor="@color/syswhite" />
    </LinearLayout>
</LinearLayout>